fixed spacing & font sizes

--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -90,5 +90,5 @@ $spacing-md: $spacing-unit * 3;
 $spacing-lg: $spacing-unit * 4;
 $spacing-xl: $spacing-unit * 5;
 
-$screen-wide: 65rem;
-$screen-medium: 55rem;
+$screen-wide: 70rem;
+$screen-medium: 60rem;
