--- a/src/scss/components/_card.scss
+++ b/src/scss/components/_card.scss
@@ -17,15 +17,13 @@
     }
 
     &__headline {
-        font-size: $font-size-base;
         margin-top: 0;
         padding-top: $spacing-sm;
     }
 
     &__description {
         line-height: 1.4;
-        font-size: $font-size-smaller;
-        margin-bottom: $spacing-lg;
+        margin-bottom: $spacing-xl;
     }
 
     &__btn {
